--- a/index.html
+++ b/index.html
@@ -27,65 +27,46 @@
         <!--[if lt IE 8]>
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-    <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="#">Project name</a>
-        </div>
-        <div id="navbar" class="navbar-collapse collapse">
-          <form class="navbar-form navbar-right" role="form">
-            <div class="form-group">
-              <input type="text" placeholder="Email" class="form-control">
-            </div>
-            <div class="form-group">
-              <input type="password" placeholder="Password" class="form-control">
-            </div>
-            <button type="submit" class="btn btn-success">Sign in</button>
-          </form>
-        </div><!--/.navbar-collapse -->
-      </div>
-    </nav>
 
-    <!-- Main jumbotron for a primary marketing message or call to action -->
-    <div class="jumbotron">
-      <div class="container">
-        <h1>Hello, world!</h1>
-        <p>This is a template for a simple marketing or informational website. It includes a large callout called a jumbotron and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
-        <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more &raquo;</a></p>
-      </div>
-    </div>
-
-    <div class="container">
+    <div class="container-fluid">
       <!-- Example row of columns -->
       <div class="row">
-        <div class="col-md-4">
-          <h2>Heading</h2>
-          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+        <div class="col-md-6 half" id="half-nz">
+          <h2>New Zealand</h2>
+          <ul>
+            <li>A country built on the <a href="https://en.wikipedia.org/wiki/Separation_of_powers" target="_blank">separation of powers</a> instead of <a href="https://en.wikipedia.org/wiki/Popular_sovereignty" target="_blank">popular sovereignity</a></li>
+            <li><a href="https://en.wikipedia.org/wiki/Common_law" target="_blank">Common law</a> instead of <a href="https://en.wikipedia.org/wiki/Civil_law_%28legal_system%29" target="_blank">civil law</a></li>
+            <li>No state-owned booze-monopoly</li>
+            <li>The climate</li>
+            <li>Lower taxes</li>
+            <li>More relaxed <a href="https://en.wikipedia.org/wiki/Gun_politics_in_New_Zealand" target="_blank">gun laws</a> (acquiring regular hunting rifles)</li>
+            <li>Get to pick health insurance provider and level</li>
+            <li>The lifestyle and the nature</li>
+            <li>Individuals decide over their own bodies in a <a href="https://en.wikipedia.org/wiki/Prostitution_in_New_Zealand" target="_blank">higher degree</a></li>
+            <li>Lists high on <a href="http://www.heritage.org/index/visualize?countries=newzealand|sweden&src=country" target="_blank">economic freedom</a></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+          </ul>
         </div>
-        <div class="col-md-4">
-          <h2>Heading</h2>
-          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+        <div class="col-md-6 half" id="half-se">
+          <h2>Sweden</h2>
+          <ul>
+            <li>We've got a cheap house in Sweden</li>
+            <li>We've got access to free babysitting</li>
+            <li>Cheap yankee cars</li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+          </ul>
        </div>
-        <div class="col-md-4">
-          <h2>Heading</h2>
-          <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
-        </div>
       </div>
 
-      <hr>
-
-      <footer>
-        <p>&copy; Company 2015</p>
-      </footer>
+      <!--<footer>
+        <p></p>
+      </footer>-->
     </div> <!-- /container -->        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.2.min.js"><\/script>')</script>
 
