--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <li>More relaxed <a href="https://en.wikipedia.org/wiki/Gun_politics_in_New_Zealand" target="_blank">gun laws</a> (acquiring regular hunting rifles)</li>
             <li>Get to pick health insurance provider and level</li>
             <li>The lifestyle and the nature</li>
-            <li>Individuals decide over their own bodies in a <a href="https://en.wikipedia.org/wiki/Prostitution_in_New_Zealand" target="_blank">higher degree</a></li>
+            <li>Individuals decide over their own bodies to a <a href="https://en.wikipedia.org/wiki/Prostitution_in_New_Zealand" target="_blank">higher degree</a></li>
             <li>Lists high on <a href="http://www.heritage.org/index/visualize?countries=newzealand|sweden&src=country" target="_blank">economic freedom</a></li>
             <li></li>
             <li></li>
@@ -54,9 +54,9 @@
           <h2>Sweden</h2>
           <ul>
             <li>We've got a cheap house in Sweden</li>
-            <li>We've got access to free babysitting</li>
+            <li>Family is in Sweden</li>
             <li>Cheap yankee cars</li>
-            <li></li>
+            <li>The kids know the language</li>
             <li></li>
             <li></li>
             <li></li>
