--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <li>The lifestyle and the nature</li>
             <li>Individuals decide over their own bodies to a <a href="https://en.wikipedia.org/wiki/Prostitution_in_New_Zealand" target="_blank">higher degree</a></li>
             <li>Lists high on <a href="http://www.heritage.org/index/visualize?countries=newzealand|sweden&src=country" target="_blank">economic freedom</a></li>
-            <li>No plans to make the former party leader of the former communist party the <a href="http://www.etc.se/inrikes/gudrun-schyman-jag-ar-smickrad" target="_blank">equality minister for the new equality ministry</a></li>
+            <li>No plans to make the former party leader of the former communist party the<br /><a href="http://www.etc.se/inrikes/gudrun-schyman-jag-ar-smickrad" target="_blank">equality minister for the new equality ministry</a> (AFAIK)</li>
             <li></li>
             <li></li>
             <li></li>
