added helmet law

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <li>Family is in Sweden</li>
             <li>Cheap yankee cars</li>
             <li>The kids know the language</li>
-            <li></li>
+            <li>No bicycle helmet laws for adults</li>
             <li></li>
             <li></li>
           </ul>
